<?xml version="1.0" encoding="UTF-8"?>

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="txt_login">Sign In</string>
    <string name="rx_tips_phone_number_err">Please enter the correct phone number</string>
    <string name="rx_tips_bind_success">Binding Successful</string>
    <string name="rx_tips_unbind_success">Unbind Successfully</string>
    <string name="rx_tips_register_success">DONE!</string>
    <string name="rx_tips_modify_success">Modified Successfully </string>
    <string name="toast_screen_time_tips">Prompt</string>
    <string name="txt_permission_desc">Permission acquisition</string>
    <string name="txt_permission_tips">To ensure your gaming experience, we will apply for the following permissions during your use of our services. At that time, you can choose to agree or refuse to enable the relevant permissions. If you refuse, it will affect some functions.</string>
    <string name="txt_later">Let ous talk about it later</string>
    <string name="txt_sure">Confirm</string>
    <string name="txt_ok">OK</string>
    <string name="txt_cancel" tools:ignore="ButtonCase">Cancel</string>
    <string name="txt_phone_register">Register</string>
    <string name="txt_enter_email">Enter an email account</string>

    <string name="txt_enter_phone">Phone number</string>
    <string name="txt_enter_account">Enter your account</string>
    <string name="txt_enter_pwd">Enter password</string>
    <string name="txt_enter_captcha">Enter the code</string>
    <string name="txt_register">Register Account</string>
    <string name="txt_disagree">Disagree</string>
    <string name="txt_agree">Agree</string>
    <string name="txt_phone">Telephone</string>
    <string name="txt_permission_phone_tips">Obtain mobile phone identification code to ensure normal gaming</string>
    <string name="txt_account_revoke">\Dear player, this account has submitted a cancellation application. Please do not log in or use this account to ensure successful cancellation. To cancel the cancellation application, please click the button below to proceed with the cancellation operation.</string>
    <string name="txt_cancel_account_revoke">Revoke Cancellation</string>
    <string name="txt_continue_login">Continue Login</string>
    <string name="txt_exit_login">Logout</string>
    <string name="txt_bind_phone">Bind Phone</string>
    <string name="txt_bind_email">Bind Email</string>
    <string name="txt_unbind_phone">Unbind Phone</string>
    <string name="txt_unbind_email">Unbind Email</string>
    <string name="txt_enter_login_pwd">Enter your login password</string>
    <string name="txt_finish">DONE!</string>
    <string name="txt_retrieve_password">Forgot password</string>
    <string name="txt_modify_pwd">Change Password</string>
    <string name="txt_set_pwd">Set Password</string>
    <string name="txt_password_rule">enter password</string>
    <string name="txt_modify_enter_old_pwd">Enter old password</string>
    <string name="txt_sure_new_pwd">Enter again</string>
    <string name="rx_error_empty_password_new">The new password cannot be empty</string>
    <string name="txt_real_name">Real-name Authentication</string>
    <string name="txt_deregister">Account Cancellation</string>
    <string name="txt_deregister_requested">Cancellation application submitted</string>
    <string name="txt_real_name_tips">According to the latest national regulations, users without real name authentication cannot experience any game content. Please complete real name authentication as soon as possible.</string>
    <string name="rx_txt_alipay_real_auth">Alipay Real-name Authentication</string>
    <string name="rx_txt_manual_real_auth">Manual Real-name Authentication</string>
    <string name="rx_tips_deregister_desc">Apply to cancel the current account. After cancellation, all data in the account will be cleared and the account cannot be restored. Please operate with caution.</string>
    <string name="txt_enter_real_name">Enter your real-name</string>
    <string name="txt_enter_id_card">Please enter ID number</string>
    <string name="txt_commit_confirm">Confirm submission</string>
    <string name="txt_confirm_and_reward">Verify &amp; Claim</string>
    <string name="rx_error_password_diff">The two password entries do not match. Please re-enter</string>
    <string name="rx_toast_sent">Verification code sent</string>
    <string name="rx_account_type_guest">Guest Account</string>
    <string name="rx_agreement_accept">I have read and agree</string>
    <string name="rx_txt_statement">Statement</string>

    <string name="txt_captcha_login">Verification Code Login</string>
    <string name="txt_password_login">Password Login</string>

    <string name="rx_txt_captcha_sent_to">The code has been sent to</string>
    <string name="rx_txt_switch_account">Switch</string>
    <string name="rx_txt_modify_phone_number">Modify phone number</string>
    <string name="rx_txt_share_to">Share To</string>
    <string name="rx_txt_stop_sharing">Cancel Sharing</string>
    <string name="rx_txt_next">Next Step</string>
    <string name="rx_tips_modify_success_relogin">Successfully modified, please log in again</string>
    <string name="rx_txt_tips">Prompt</string>
    <string name="rx_confirm_del_account">Are you sure to delete this account?</string>
    <string name="rx_tips_resend">Can be resent later</string>
    <string name="rx_titps_pwd_diff">The two passwords do not match, please recheck.</string>
    <string name="rx_tips_regain">Re-send</string>
    <string name="rx_txt_resetpwd">Reset Password</string>
    <string name="rx_tips_resetpwd_success">Password reset successful</string>
    <string name="rx_txt_privacy_sure">Please confirm that you have read and agree</string>
    <string name="rx_txt_and">and</string>
    <string name="rx_txt_realname_success">Real name authentication successful</string>
    <string name="rx_txt_realname_failed">Real name authentication failed</string>
    <string name="rx_txt_legal_no_configurde">No legal related data configured, please check the configuration</string>
    <string name="rx_txt_input_bound_phone">Enter the currently bound phone number</string>
    <string name="rx_txt_input_new_phone">Enter a new phone number</string>
    <string name="rx_txt_screen_time">[Anti Addiction System] You are currently unable to log in to the game. According to the rules of the addiction system, you can only play the game on Fridays, Saturdays, Sundays, and holidays from 20:00 to 21:00. Please arrange the game time reasonably and click "Exit Game" to exit.</string>
    <string name="rx_txt_loading">Loading</string>
    <string name="rx_txt_input_captcha">Enter the code</string>
    <string name="rx_txt_get_captcha">Get code</string>
    <string name="rx_txt_no_account">No account yet?</string>
    <string name="rx_txt_register_now">Sign Up</string>
    <string name="rx_txt_account">Account</string>
    <string name="rx_txt_more_login_method">Sign in with &gt;</string>
    <string name="rx_txt_more_login_method1">Sign in with</string>
    <string name="rx_txt_game_privacy">Terms</string>
    <string name="rx_txt_please_agree_all_privacy">Accept all and start playing</string>
    <string name="rx_txt_agree_start">Agree and Start</string>
    <string name="rx_txt_start_game">Play</string>
    <string name="rx_txt_select_region">Regional Selection</string>
    <string name="rx_txt_input_search_region">Enter the region to search for</string>
    <string name="rx_txt_unknown">Unknown</string>
    <string name="rx_txt_enter_game">Enter Game</string>
    <string name="rx_txt_user_center">User Center</string>
    <string name="rx_txt_return_game">BACK</string>
    <string name="rx_txt_services">Contact us</string>
    <string name="rx_tips_enter_email">Enter an email account</string>
    <string name="rx_tips_enter_phone">Please enter your phone number</string>
    <string name="rx_tips_email_format_err">Incorrect email format, please enter again</string>
    <string name="rx_txt_more">More</string>

    <string name="rx_txt_userinfo_update">User information has been updated</string>

    <string name="mail_title">Email</string>
    <string name="mail_auto_dele">Emails are automatically deleted after more than a week</string>
    <string name="mail_one_click_collection">One-click collection</string>
    <string name="mail_claim_the_item">Claim the item</string>
    <string name="mail_delete_email">Delete email</string>
    <string name="mail_permanently_valid">Permanently valid</string>
    <string name="mail_limit_expiration">Expires in &lt;font color="red"&gt;%1$s&lt;/font&gt; days。</string>
    <string name="mail_receive_successful">Successfully claimed</string>
    <string name="mail_receive_fial">Claim failed</string>
    <string name="mail_delete_successful">Deletion successful</string>
    <string name="mail_delete_fail">Deletion failed</string>
    <string name="mail_load_fail">Loading failed</string>
    <string name="announce_maintain_title">Maintenance Notice</string>
    <string name="announce_view_title">Bulletin Board</string>
    <string name="rx_login_last">最近使用</string>


</resources>
