<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/card_common_margin_hor"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_15">

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:scaleType="centerInside"
                     android:rotationY="@integer/rotation"
                    android:src="@drawable/ruixue_arrow_left" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/rx_txt_resetpwd"
                    android:textColor="#000000"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="vertical"
                android:paddingHorizontal="28dp">

                <com.ruixue.widget.PwdEditText
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/edit_height"
                    app:hint="@string/txt_password_rule"
                    app:imeOptions="flagNoExtractUi" />

                <com.ruixue.widget.PwdEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/edit_height"
                    android:layout_marginTop="@dimen/dp_13"
                    app:hint="@string/txt_sure_new_pwd"
                    app:imeOptions="actionDone" />

                <Button
                    android:id="@+id/sure"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_24"
                    android:layout_marginBottom="@dimen/dp_27"
                    android:background="@drawable/selec_btn_bg"
                    android:enabled="false"
                    android:gravity="center"
                    android:stateListAnimator="@null"
                    android:text="@string/txt_sure"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
