<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/card_common_margin_hor"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/dp_30">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="center"
                android:text="@string/txt_permission_desc"
                android:textColor="#000000"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_8"
                android:text="@string/txt_permission_tips"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_11" />

            <ScrollView
                android:id="@+id/scroll_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8">

                <com.ruixue.widget.CustomGridView
                    android:id="@+id/gview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:horizontalSpacing="9dp"
                    android:numColumns="3"
                    android:verticalSpacing="@dimen/dp_8" />
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_14"
                android:layout_marginBottom="@dimen/dp_25"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/close"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_38"
                    android:layout_weight="1"
                    android:background="@drawable/shape_btn_2_normal"
                    android:stateListAnimator="@null"
                    android:gravity="center"
                    android:text="@string/txt_later"
                    android:textColor="@color/color_20c0b3"
                    android:textSize="@dimen/sp_16" />

                <View
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="0dp" />

                <Button
                    android:id="@+id/sure"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_38"
                    android:layout_weight="1"
                    android:background="@drawable/shape_btn_1_normal"
                    android:gravity="center"
                    android:text="@string/txt_sure"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
