<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/card_common_margin_hor"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_15">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerInside"
                    android:rotationY="@integer/rotation"
                    android:src="@drawable/ruixue_arrow_left"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/txt_retrieve_password"
                    android:textColor="#000000"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                 <ImageView
                    android:id="@+id/close"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ruixue_close_dialog" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="28dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20">

                    <EditText
                            style="@style/EditTextStyle.Alignment"
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_height"
                        android:layout_centerVertical="true"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/txt_enter_account"
                        android:imeOptions="actionDone"
                        android:inputType="phone"
                        android:paddingStart="@dimen/dp_15"
                        android:paddingEnd="@dimen/dp_10"
                        android:singleLine="true"

                        android:textColor="@color/black"
                        android:textColorHint="@color/color_a5caca"
                        android:textSize="@dimen/sp_14" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_height"
                    android:layout_marginTop="@dimen/dp_13">

                    <EditText
                            style="@style/EditTextStyle.Alignment"
                        android:id="@+id/et_captcha"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_height"
                        android:layout_centerVertical="true"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/txt_enter_captcha"
                        android:inputType="number"
                        android:paddingStart="@dimen/dp_15"
                        android:paddingEnd="@dimen/dp_80"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/color_a5caca"
                        android:maxLength="6"
                        android:textSize="@dimen/sp_14" />


                    <TextView
                        android:id="@+id/tv_get_code"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/edit_height"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/rx_txt_get_captcha"
                        android:textColor="@color/color_74d2cb"
                        android:textSize="@dimen/sp_14" />

                </RelativeLayout>

                <Button
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_24"
                    android:layout_marginBottom="@dimen/dp_27"
                    android:background="@drawable/selec_btn_bg"
                    android:enabled="false"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:stateListAnimator="@null"
                    android:text="@string/rx_txt_next"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
