<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/card_common_margin_hor"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_10">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/rx_txt_modify_phone_number"
                    android:textColor="#000000"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ruixue_close_dialog" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="28dp">

                <EditText
                            style="@style/EditTextStyle.Alignment"
                    android:id="@+id/et_old_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_36"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/rx_txt_input_bound_phone"
                    android:paddingStart="@dimen/dp_15"
                    android:paddingEnd="@dimen/dp_10"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_a5caca"
                    android:textSize="@dimen/sp_16" />

                <RelativeLayout
                    android:id="@+id/rl_ole_captcha"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_36"
                    android:layout_marginTop="@dimen/dp_10">

                    <EditText
                            style="@style/EditTextStyle.Alignment"
                        android:id="@+id/et_old_captcha"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_42"
                        android:layout_centerVertical="true"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/txt_enter_captcha"
                        android:inputType="number"
                        android:maxLength="6"
                        android:paddingStart="@dimen/dp_15"
                        android:paddingEnd="100dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/color_a5caca"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:id="@+id/tv_old_get_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:padding="2dp"
                        android:text="@string/rx_txt_get_captcha"
                        android:textColor="@color/color_74d2cb"
                        android:textSize="@dimen/sp_14" />

                </RelativeLayout>

                <EditText
                            style="@style/EditTextStyle.Alignment"
                    android:id="@+id/tv_new_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_36"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/rx_txt_input_new_phone"
                    android:paddingStart="@dimen/dp_15"
                    android:paddingEnd="@dimen/dp_10"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_a5caca"
                    android:textSize="@dimen/sp_16" />


                <RelativeLayout
                    android:id="@+id/rl_captcha"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_36"
                    android:layout_marginTop="@dimen/dp_10">

                    <EditText
                            style="@style/EditTextStyle.Alignment"
                        android:id="@+id/et_new_captcha"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_42"
                        android:layout_centerVertical="true"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/txt_enter_captcha"
                        android:inputType="number"
                        android:maxLength="6"
                        android:paddingStart="@dimen/dp_15"
                        android:paddingEnd="100dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/color_a5caca"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:id="@+id/tv_get_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:padding="2dp"
                        android:text="@string/rx_txt_get_captcha"
                        android:textColor="@color/color_74d2cb"
                        android:textSize="@dimen/sp_14" />

                </RelativeLayout>


                <Button
                    android:id="@+id/btn_finish"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_38"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:background="@drawable/selec_btn_bg"
                    android:enabled="false"
                    android:gravity="center"
                    android:stateListAnimator="@null"
                    android:text="@string/txt_sure"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16" />


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
